comment out the previous day's challenge. current day good. eat well using flex box

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>frontend 100 days of coding </title>
 </head>
 <body>
-  <section class="socialproof">
+  <!-- <section class="socialproof">
     <div class="container">
       <div class="headtag">
         <div class="headtag__left">
@@ -88,6 +88,48 @@
       </div>
       </div>
     </div>
+  </section> -->
+  <section class="daythree interactive-element">
+      <div class="container">
+        <div class="parent-element">
+          <div class="top-element">
+            <div class="child-element">
+              <span class="circle"></span>
+              <div class="child-container">
+                <h3 class="amount">1</h3>
+                <h3 class="size">GB</h3>
+              </div>
+              <span class="rectangle"></span>
+            </div>
+            <div class="child-element">
+              <span class="circle"></span>
+              <div class="child-container">
+                <h3 class="amount">5</h3>
+                <h3 class="size">GB</h3>
+              </div>
+              <span class="rectangle"></span>
+            </div>
+          </div>
+          <div class="bottom-element">
+            <div class="child-element">
+              <span class="circle"></span>
+              <div class="child-container">
+                <h3 class="amount">10</h3>
+                <h3 class="size">GB</h3>
+              </div>
+              <span class="rectangle"></span>
+            </div>
+            <div class="child-element">
+              <span class="circle"></span>
+              <div class="child-container">
+                <h3 class="amount">20</h3>
+                <h3 class="size">GB</h3>
+              </div>
+              <span class="rectangle"></span>
+            </div>
+          </div>
+        </div>
+      </div>
   </section>
   
 </body>
